# RaceSimulator

./: CMakeLists.txt  main.cpp
Game/: CMakeLists.txt  Consts.h  Game.cpp  Game.h
Transport/: CMakeLists.txt  Transport.cpp  Transport.h
Transport/Air/: AirTransport.cpp  AirTransport.h  Broom.cpp  Broom.h  Consts.cpp  Consts.h  Eagle.cpp  Eagle.h  MagicCarpet.cpp  MagicCarpet.h
Transport/Land/: AllTerrainBoots.cpp  AllTerrainBoots.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Consts.cpp  Consts.h  FastCamel.cpp  FastCamel.h  LandTransport.cpp  LandTransport.h
